2022-09-01T16:08:51Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2973196216
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 22 56
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 23 57
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-01]

2022-08-31T00:47:21Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960575011
* notice: last 14d: unq all: 4 8
* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 21 54
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 22 56
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-30]

2022-08-30T16:08:55Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2957804138
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 20 53
* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 21 54
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-16] / []

2022-08-30T08:09:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2954586881
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 21 54
* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 20 53
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [] / [2022-08-16]

2022-08-29T16:08:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2950009118
* notice: last 14d: unq all: 5 8