@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-01T16:08:51Z",
+  "timestamp" : "2022-09-05T00:44:00Z",
   "count_outdated" : 48,
   "uniques_outdated" : 18,
-  "count" : 57,
-  "uniques" : 23,
+  "count" : 60,
+  "uniques" : 24,
   "views" : [
     {
       "timestamp": "2022-08-24T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-04T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
