@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 12,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2022-08-24T00:00:00Z",
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-04T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
