@@ -1,3 +1,11 @@
+2022-09-05T00:44:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990153247
+* notice: last 14d: unq all: 6 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 23 57
+* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 24 60
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-09-04]
+
 2022-09-01T16:08:51Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2973196216
 * notice: last 14d: unq all: 5 9
